--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">About<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Portfolio</a>
-                <a class="nav-item nav-link" href="#">Contact</a>
+                <a class="nav-item nav-link active" href="index.html">About<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link" href="contact.html">Contact</a>
             </div>
         </div>
     </nav>
+    <h1>
+        About Me
+    </h1>
+
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <img src="assets/images/photo1.jpg" height="200px" width="265px" />
+               <img class="img-fluid" src="assets/images/photo1.jpg" alt="photo of me"/>
             </div>
 
             <div class="col-md-8">
