--- a/contact.html
+++ b/contact.html
@@ -14,30 +14,29 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #800000">
-        <a class="navbar-brand" href="#">Don Wasinger</a>
+        <a class="navbar-brand" href="index.html">Don Wasinger</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">About<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link" href="contact.html">Contact</a>
+                <a class="nav-item nav-link active" href="contact.html">Contact</a>
             </div>
         </div>
     </nav>
 
-    <h1>
+    <h2>
         Connect
-    </h1>
+    </h2>
 
     <div class="container">
         <form>
             <div class="form-group">
                 <label for="exampleInputName1">Name</label>
-                <input type="text" class="form-control" id="exampleInputName" aria-descibedby="nameHelp"
-                    placeholder="Enter Name">
+                <input type="text" class="form-control" id="exampleInputName" aria-descibedby="nameHelp" placeholder="Enter Name">
             </div>
 
             <div class="form-group">
@@ -48,9 +47,8 @@
             </div>
 
             <div class="form-group">
-                    <label for="exampleInputMessage1">Message</label>
-                    <input type="text" class="form-control" id="exampleInputName" aria-descibedby="nameHelp"
-                        placeholder="Write something...">
+                <label for="exampleInputMessage1">Message</label>
+                <input type="text" class="form-control" id="exampleInputName" aria-descibedby="nameHelp" placeholder="Write something...">
             </div>
 
             <br>
@@ -58,3 +56,16 @@
             <button type="submit" class="btn btn-primary">Send Email</button>
         </form>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+    <footer>
+        Copyright
+    </footer>
+
+</body>
