--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #800000">
-        <a class="navbar-brand" href="#">Don Wasinger</a>
+        <a class="navbar-brand" href="index.html">Don Wasinger</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,40 +28,49 @@
             </div>
         </div>
     </nav>
-    <h1>
+    <h2>
         About Me
-    </h1>
+    </h2>
 
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
-               <img class="img-fluid" src="assets/images/photo1.jpg" alt="photo of me"/>
-            </div>
-
-            <div class="col-md-8">
+            <div class="container">
+                
+                    <img id="profilePic" class="float-left img" src="assets/images/photo1.jpg" alt="photo of me" />
+                
                 <p>
-                I grew up in Winona, Minnesota and attended college at the University of Kansas. I've served the
-                citizens of Overland Park as a police officer for the last 5 years. During that time, I received
-                several merit-based awards and commendations, including being named Officer of the Quarter in 2018.
-                <br>
-                <br>
-                As a full-stack developer I have earned experience across the range of the most current and relevant
-                coding languanges for both front-end and back-end web development. I enjoy working on a team to solve complex and
-                dynamic problems in my current role, and am looking forward to those same challenges as a web
-                developer.
-                <br>
-                <br>
-                I believe technology has the power to make our lives easier. I want to use my skills, knowledge, and
-                creativity to make websites and applications more intuitive and efficient.
+                    I grew up in Winona, Minnesota and attended college at the University of Kansas. I've served the
+                    citizens of Overland Park as a police officer for the last 5 years. During that time, I received
+                    several merit-based awards and commendations, including being named Officer of the Quarter in 2018.
+                    <br>
+                    <br>
+                    As a full-stack developer I have earned experience across the range of the most current and
+                    relevant
+                    coding languanges for both front-end and back-end web development. I enjoy working on a team to
+                    solve complex and
+                    dynamic problems in my current role, and am looking forward to those same challenges as a web
+                    developer.
+                    <br>
+                    <br>
+                    I believe technology has the power to make our lives easier. I want to use my skills, knowledge,
+                    and
+                    creativity to make websites and applications more intuitive and efficient.
                 </p>
             </div>
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
 
-
-
+<footer>
+    Copyright
+</footer>
 
 
 </body>
