--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
-
 </head>
 
 
@@ -46,16 +46,15 @@
                     <br>
                     As a full-stack developer I have earned experience across the range of the most current and
                     relevant
-                    coding languanges for both front-end and back-end web development. I enjoy working on a team to
-                    solve complex and
-                    dynamic problems in my current role, and am looking forward to those same challenges as a web
-                    developer.
+                    coding languanges for both front-end and back-end web development. In my current role as a police officer I enjoy working on a team to
+                    solve complex and dynamic problems, and I look forward to those same challenges as a web developer.
                     <br>
                     <br>
                     I believe technology has the power to make our lives easier. I want to use my skills, knowledge,
                     and
                     creativity to make websites and applications more intuitive and efficient.
                 </p>
+                <br>
             </div>
         </div>
     </div>
