link to hangman

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,20 +34,48 @@
     </h2>
     <div class="container1">
         <div class="row">
-            <div class="col-md-3">
-                <button class="statsBtn" href="#">Stats Tracker</button>
-                <img class="statsImg" src="assets/images/KU_statue.jpeg" height="220px" width="200px" alt="stat tracker">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="assets/images/KU_statue.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Stats Tracker</h5>
+                      <p class="card-text">Example Card. Link does not go anywhere.</p>
+                      <a href="#" target="blank" class="btn btn-primary">Open</a>
+                    </div>
+                </div>
+                <!-- <button class="statsBtn" href="#">Stats Tracker</button>
+                <img class="statsImg" src="assets/images/KU_statue.jpeg" height="220px" width="200px" alt="stat tracker"> -->
             </div>
 
-            <div class="col-md-3">
-                <button class="policeBtn" href="#">Police Reports</button>
-                <img class="policeImg" src="assets/images/police.jpeg" height="220px" width="200px" alt="police report">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" id="policeImg" src="assets/images/police.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Police Reports</h5>
+                      <p class="card-text">Example Card. Link does not go anywhere.</p>
+                      <a href="#" target="blank" class="btn btn-primary">Open</a>
+                    </div>
+                </div>
+                
+                <!-- <button class="policeBtn" href="#">Police Reports</button>
+                <img class="policeImg" src="assets/images/police.jpeg" height="220px" width="200px" alt="police report"> -->
             </div>
 
-            <div class="col-md-3">
-                <button class="ticketBtn" href="#">Ticket Finder</button>
-                <img class="ticketImg" src="assets/images/tickets.jpeg" height="220px" width="200px" alt="ticket finder">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" id="musicImg" src="assets/images/CountryMusic.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Hangman Game</h5>
+                      <p class="card-text">JavaScript word guessing game with a country music theme.</p>
+                      <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-primary">Open</a>
+                    </div>
+                </div>
             </div>
+
+            <!-- <div class="col-md-3">
+                <button class="ticketBtn" href="https://djwasing.github.io/Word_Guess_Game/">Hangman Game</button>
+                <img class="ticketImg" src="assets/images/CountryMusic.jpg" height="220px" width="200px" alt="ticket finder">
+            </div> -->
         </div>
     </div>
 
