--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     solve complex and dynamic problems, and I look forward to those same challenges as a web developer.
                     <br>
                     <br>
-                    I believe technology has the power to make our lives easier. I want to use my skills, knowledge,
+                    I believe technology has the power to make our lives better. I want to use my skills, knowledge,
                     and
                     creativity to make websites and applications more intuitive and efficient.
                 </p>
