--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,13 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #800000">
-        <a class="navbar-brand" href="index.html">Don Wasinger</a>
+        <img src="assets/images/avatar1.jpg" width="50" height="50" class="d-inline-block align-top" id="avatar"
+        alt="small picture of me">
+        <a class="navbar-brand" href="index.html">
+            <div class="nameText">
+                Don Wasinger
+            </div>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
