--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="container navbar-nav">
+                <a href="https://twitter.com/D7_41" target="blank">
+                    <img class="twitterLink" src="assets/images/twitterImg.png" height="50" width="50" alt="twitter icon">
+                </a>
+                <a href="https://github.com/djwasing" target="blank">
+                    <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
+                </a>
                 <a class="nav-item nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link active" href="contact.html">Contact</a>
             </div>
+        
+
         </div>
     </nav>
 
