--- a/index.html
+++ b/index.html
@@ -15,13 +15,24 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #800000">
-        <a class="navbar-brand" href="index.html">Don Wasinger</a>
+        <img src="assets/images/avatar1.jpg" width="50" height="50" class="d-inline-block align-top" id="avatar" alt="small picture of me">
+        <a class="navbar-brand" href="index.html">
+            <div class="nameText">
+                Don Wasinger
+            </div>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="container navbar-nav">
+                <a href="https://twitter.com/D7_41" target="blank">
+                    <img class="twitterLink" src="assets/images/twitterImg.png" height="50" width="50" alt="twitter icon">
+                </a>
+                <a href="https://github.com/djwasing" target="blank">
+                    <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
+                </a>
                 <a class="nav-item nav-link active" href="index.html">About<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link" href="contact.html">Contact</a>
@@ -35,9 +46,9 @@
     <div class="container">
         <div class="row">
             <div class="container">
-                
-                    <img id="profilePic" class="float-left img" src="assets/images/photo1.jpg" alt="photo of me" />
-                
+
+                <img id="profilePic" class="float-left img" src="assets/images/photo2.JPG" alt="photo of me" />
+
                 <p>
                     I grew up in Winona, Minnesota and attended college at the University of Kansas. I've served the
                     citizens of Overland Park as a police officer for the last 5 years. During that time, I received
@@ -46,7 +57,8 @@
                     <br>
                     As a full-stack developer I have earned experience across the range of the most current and
                     relevant
-                    coding languanges for both front-end and back-end web development. In my current role as a police officer I enjoy working on a team to
+                    coding languanges for both front-end and back-end web development. In my current role as a police
+                    officer I enjoy working on a team to
                     solve complex and dynamic problems, and I look forward to those same challenges as a web developer.
                     <br>
                     <br>
@@ -67,9 +79,9 @@
         crossorigin="anonymous"></script>
 
 
-<footer>
-    Copyright
-</footer>
+    <footer>
+        Copyright
+    </footer>
 
 
 </body>
