--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #800000">
-        <img src="assets/images/avatar1.jpg" width="50" height="50" class="d-inline-block align-top" id="avatar"
-        alt="small picture of me">
+        <img src="assets/images/avatar1.jpg" width="50" height="50" class="d-inline-block align-top" id="avatar" alt="small picture of me">
         <a class="navbar-brand" href="index.html">
             <div class="nameText">
                 Don Wasinger
@@ -27,7 +26,13 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="container navbar-nav">
+                <a href="https://twitter.com/D7_41" target="blank">
+                    <img class="twitterLink" src="assets/images/twitterImg.png" height="50" width="50" alt="twitter icon">
+                </a>
+                <a href="https://github.com/djwasing" target="blank">
+                    <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
+                </a>
                 <a class="nav-item nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link" href="contact.html">Contact</a>
@@ -44,9 +49,9 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="assets/images/KU_statue.jpeg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Stats Tracker</h5>
-                      <p class="card-text">Example Card. Link does not go anywhere.</p>
-                      <a href="#" target="blank" class="btn btn-primary">Open</a>
+                        <h5 class="card-title">Stats Tracker</h5>
+                        <p class="card-text">Example Card. Link does not go anywhere.</p>
+                        <a href="#" target="blank" class="btn btn-primary">Open</a>
                     </div>
                 </div>
                 <!-- <button class="statsBtn" href="#">Stats Tracker</button>
@@ -57,12 +62,12 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" id="policeImg" src="assets/images/police.jpeg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Police Reports</h5>
-                      <p class="card-text">Example Card. Link does not go anywhere.</p>
-                      <a href="#" target="blank" class="btn btn-primary">Open</a>
+                        <h5 class="card-title">Police Reports</h5>
+                        <p class="card-text">Example Card. Link does not go anywhere.</p>
+                        <a href="#" target="blank" class="btn btn-primary">Open</a>
                     </div>
                 </div>
-                
+
                 <!-- <button class="policeBtn" href="#">Police Reports</button>
                 <img class="policeImg" src="assets/images/police.jpeg" height="220px" width="200px" alt="police report"> -->
             </div>
@@ -71,9 +76,9 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" id="musicImg" src="assets/images/CountryMusic.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Hangman Game</h5>
-                      <p class="card-text">JavaScript word guessing game with a country music theme.</p>
-                      <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-primary">Open</a>
+                        <h5 class="card-title">Hangman Game</h5>
+                        <p class="card-text">JavaScript word guessing game with a country music theme.</p>
+                        <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-primary">Open</a>
                     </div>
                 </div>
             </div>
