added link to LOTR game

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,11 +60,11 @@
 
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" id="policeImg" src="assets/images/police.jpeg" alt="Card image cap">
+                    <img class="card-img-top" id="policeImg" src="assets/images/LOTR.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Police Reports</h5>
-                        <p class="card-text">Example Card. Link does not go anywhere.</p>
-                        <a href="#" target="blank" class="btn btn-primary">Open</a>
+                        <h5 class="card-title">Lord of the Rings RPG</h5>
+                        <p class="card-text">jquery battle card game with a Lord of the Rings theme.</p>
+                        <a href="https://djwasing.github.io/unit-4-game/" target="blank" class="btn btn-primary">Open</a>
                     </div>
                 </div>
 
