added new project

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,11 +47,11 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/images/KU_statue.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/office.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Stats Tracker</h5>
-                        <p class="card-text">Example Card. Link does not go anywhere.</p>
-                        <a href="#" target="blank" class="btn btn-primary">Open</a>
+                        <h5 class="card-title">Trivia Game</h5>
+                        <p class="card-text">jQuery trivia game with The Office theme</p>
+                        <a href="https://djwasing.github.io/TriviaGame/" target="blank" class="btn btn-primary btn-lg">Open</a>
                     </div>
                 </div>
                 <!-- <button class="statsBtn" href="#">Stats Tracker</button>
@@ -63,8 +63,8 @@
                     <img class="card-img-top" id="policeImg" src="assets/images/LOTR.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Lord of the Rings RPG</h5>
-                        <p class="card-text">jquery battle card game with a Lord of the Rings theme.</p>
-                        <a href="https://djwasing.github.io/unit-4-game/" target="blank" class="btn btn-primary">Open</a>
+                        <p class="card-text">jQuery battle card game with a Lord of the Rings theme.</p>
+                        <a href="https://djwasing.github.io/unit-4-game/" target="blank" class="btn btn-primary btn-lg">Open</a>
                     </div>
                 </div>
 
@@ -78,7 +78,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Hangman Game</h5>
                         <p class="card-text">JavaScript word guessing game with a country music theme.</p>
-                        <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-primary">Open</a>
+                        <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-primary btn-lg">Open</a>
                     </div>
                 </div>
             </div>
