adding A6 to portfolio and code clean up

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,22 +54,17 @@
                         <a href="https://djwasing.github.io/TriviaGame/" target="blank" class="btn btn-primary btn-lg">Open</a>
                     </div>
                 </div>
-                <!-- <button class="statsBtn" href="#">Stats Tracker</button>
-                <img class="statsImg" src="assets/images/KU_statue.jpeg" height="220px" width="200px" alt="stat tracker"> -->
             </div>
 
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" id="policeImg" src="assets/images/LOTR.jpg" alt="Card image cap">
+                    <img class="card-img-top" id="apiImage" src="assets/images/apiImage.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Lord of the Rings RPG</h5>
-                        <p class="card-text">jQuery battle card game with a Lord of the Rings theme.</p>
-                        <a href="https://djwasing.github.io/unit-4-game/" target="blank" class="btn btn-primary btn-lg">Open</a>
+                        <h5 class="card-title">Giphy Search App</h5>
+                        <p class="card-text">GIF search using Giphy API and jQuery for dynamic creation.</p>
+                        <a href="https://djwasing.github.io/gif_dynamic/" target="blank" class="btn btn-primary btn-lg">Open</a>
                     </div>
                 </div>
-
-                <!-- <button class="policeBtn" href="#">Police Reports</button>
-                <img class="policeImg" src="assets/images/police.jpeg" height="220px" width="200px" alt="police report"> -->
             </div>
 
             <div class="col-md-4">
@@ -82,11 +77,19 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- <div class="col-md-3">
-                <button class="ticketBtn" href="https://djwasing.github.io/Word_Guess_Game/">Hangman Game</button>
-                <img class="ticketImg" src="assets/images/CountryMusic.jpg" height="220px" width="200px" alt="ticket finder">
-            </div> -->
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" id="policeImg" src="assets/images/LOTR.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Lord of the Rings RPG</h5>
+                        <p class="card-text">jQuery battle card game with a Lord of the Rings theme.</p>
+                        <a href="https://djwasing.github.io/unit-4-game/" target="blank" class="btn btn-primary btn-lg">Open</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
