adding About Me info

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
     <div class="container1">
         <div class="row">
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card card1" style="width: 18rem;">
                     <img class="card-img-top" src="assets/images/office.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Trivia Game</h5>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card card1" style="width: 18rem;">
                     <img class="card-img-top" id="apiImage" src="assets/images/apiImage.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Giphy Search App</h5>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card card1" style="width: 18rem;">
                     <img class="card-img-top" id="musicImg" src="assets/images/CountryMusic.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Hangman Game</h5>
@@ -81,7 +81,7 @@
 
         <div class="row">
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card card2" style="width: 18rem;">
                     <img class="card-img-top" id="policeImg" src="assets/images/LOTR.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Lord of the Rings RPG</h5>
