--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
                     several merit-based awards and commendations, including being named Officer of the Quarter in 2018.
                     <br>
                     <br>
+                    In my spare time I enjoy working with my wife, Jackie, to remodel our 92-year-old <a href="https://www.instagram.com/flint.street_farmhouse/" target="blank">fixer-upper home</a>, 
+                    riding my motorcycle, and spending time outdoors hunting, hiking, or walking our two dogs, Riften and Rosie. 
+                    <br>
+                    <br>
                     As a full-stack developer I have earned experience across the range of the most current and
-                    relevant
-                    coding languanges for both front-end and back-end web development. In my current role as a police
-                    officer I enjoy working on a team to
-                    solve complex and dynamic problems, and I look forward to those same challenges as a web developer.
+                    relevant coding languanges for both front-end and back-end web development. In my current role as a police
+                    officer I enjoy working on a team to solve complex and dynamic problems, and I look forward to those same challenges as a web developer.
                     <br>
                     <br>
                     I believe technology has the power to make our lives better. I want to use my skills, knowledge,
-                    and
-                    creativity to make websites and applications more intuitive and efficient.
+                    and creativity to make websites and applications more intuitive and efficient.
                 </p>
                 <br>
             </div>
