added carousel, more info on about me, link to insta

--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="container navbar-nav">
-                <a href="https://twitter.com/D7_41" target="blank">
+                <!-- <a href="https://twitter.com/D7_41" target="blank">
                     <img class="twitterLink" src="assets/images/twitterImg.png" height="50" width="50" alt="twitter icon">
-                </a>
+                </a> -->
                 <a href="https://github.com/djwasing" target="blank">
                     <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
                 </a>
