--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="container navbar-nav">
-                <a href="https://twitter.com/D7_41" target="blank">
+                <!-- <a href="https://twitter.com/D7_41" target="blank">
                     <img class="twitterLink" src="assets/images/twitterImg.png" height="50" width="50" alt="twitter icon">
-                </a>
+                </a> -->
                 <a href="https://github.com/djwasing" target="blank">
                     <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
                 </a>
@@ -46,8 +46,27 @@
     <div class="container">
         <div class="row">
             <div class="container">
+                <div id="carouselExampleSlidesOnly" class="carousel slide float-left photos" data-ride="carousel">
+                    <div class="carousel-inner photos1">
+                        <div class="carousel-item active">
+                            <img src="assets/images/photo2.JPG" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/MotoPhoto.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/DJandTruck.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/DWroyals.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/DJhiking.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
 
-                <img id="profilePic" class="float-left img" src="assets/images/photo2.JPG" alt="photo of me" />
+                <!-- <img id="profilePic" class="float-left img" src="assets/images/photo2.JPG" alt="photo of me" /> -->
 
                 <p>
                     I grew up in Winona, Minnesota and attended college at the University of Kansas. I've served the
@@ -55,17 +74,25 @@
                     several merit-based awards and commendations, including being named Officer of the Quarter in 2018.
                     <br>
                     <br>
-                    In my spare time I enjoy working with my wife, Jackie, to remodel our 92-year-old <a href="https://www.instagram.com/flint.street_farmhouse/" target="blank">fixer-upper home</a>, 
-                    riding my motorcycle, and spending time outdoors hunting, hiking, or walking our two dogs, Riften and Rosie. 
+                    In my spare time I enjoy working with my wife, Jackie, to remodel our 92-year-old <a href="https://www.instagram.com/flint.street_farmhouse/"
+                        target="blank">fixer-upper home</a>,
+                    riding my motorcycle, and spending time outdoors hunting, hiking, or walking our two dogs, Riften
+                    and Rosie.
                     <br>
                     <br>
                     As a full-stack developer I have earned experience across the range of the most current and
-                    relevant coding languanges for both front-end and back-end web development. In my current role as a police
-                    officer I enjoy working on a team to solve complex and dynamic problems, and I look forward to those same challenges as a web developer.
+                    relevant coding languanges for both front-end and back-end web development. In my current role as a
+                    police
+                    officer I enjoy working on a team to solve complex and dynamic problems, and I look forward to
+                    those same challenges as a web developer.
                     <br>
                     <br>
                     I believe technology has the power to make our lives better. I want to use my skills, knowledge,
                     and creativity to make websites and applications more intuitive and efficient.
+                    <br>
+                    <br>
+                    Please explore my website and view my Portfolio. You can also jump to my Github via the icon to view my code. 
+                    Enter your contact info and I will get back to you right away. Thanks for visiting!
                 </p>
                 <br>
             </div>
