--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="row">
             <div class="container">
-                <div id="carouselExampleSlidesOnly" class="carousel slide float-left photos" data-ride="carousel">
+                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade float-left photos" data-ride="carousel">
                     <div class="carousel-inner photos1">
                         <div class="carousel-item active">
                             <img src="assets/images/photo2.JPG" class="d-block w-100" alt="...">
