--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                     <img class="card-img-top" src="assets/images/office.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Trivia Game</h5>
-                        <p class="card-text">jQuery trivia game with The Office theme</p>
+                        <p class="card-text">jQuery trivia game with The Office theme.</p>
                         <a href="https://djwasing.github.io/TriviaGame/" target="blank" class="btn btn-primary btn-lg">Open</a>
                     </div>
                 </div>
