--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <!-- <img id="profilePic" class="float-left img" src="assets/images/photo2.JPG" alt="photo of me" /> -->
 
                 <p>
-                    I grew up in Winona, Minnesota and attended college at the University of Kansas. I've served the
+                    I grew up in Winona, Minnesota and graduated from the University of Kansas. I've served the
                     citizens of Overland Park as a police officer for the last 5 years. During that time, I received
                     several merit-based awards and commendations, including being named Officer of the Quarter in 2018.
                     <br>
