--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                     <img class="card-img-top" id="apiImage" src="assets/images/apiImage.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Giphy Search App</h5>
-                        <p class="card-text">GIF search using Giphy API and jQuery for dynamic creation.</p>
+                        <p class="card-text">Ajax call to Giphy API and jQuery for dynamic creation.</p>
                         <a href="https://djwasing.github.io/gif_dynamic/" target="blank" class="btn btn-primary btn-lg">Open</a>
                     </div>
                 </div>
