added photo, editing

--- a/index.html
+++ b/index.html
@@ -49,19 +49,22 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade float-left photos" data-ride="carousel">
                     <div class="carousel-inner photos1">
                         <div class="carousel-item active">
-                            <img src="assets/images/photo2.JPG" class="d-block w-100" alt="...">
+                            <img src="assets/images/photo2.JPG" class="d-block w-100" alt="Don and Jackie with dogs">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/MotoPhoto.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/images/MotoPhoto.jpg" class="d-block w-100" alt="Me on motorcycle">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/DJandTruck.jpeg" class="d-block w-100" alt="...">
+                            <img src="assets/images/DJandTruck.jpeg" class="d-block w-100" alt="Don, Jackie, Grandpa's Truck">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/DWroyals.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/images/DWroyals.jpg" class="d-block w-100" alt="Don at Royals media room">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/DJhiking.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/images/DJhiking.jpg" class="d-block w-100" alt="Don and Jackie hiking AZ">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/motoPic.jpg" class="d-block w-100" alt="Don Tail of the Dragon">
                         </div>
                     </div>
                 </div>
@@ -83,7 +86,7 @@
                     As a full-stack developer I have earned experience across the range of the most current and
                     relevant coding languanges for both front-end and back-end web development. In my current role as a
                     police
-                    officer I enjoy working on a team to solve complex and dynamic problems, and I look forward to
+                    officer I enjoy working as a team to solve complex and dynamic problems, and I look forward to
                     those same challenges as a web developer.
                     <br>
                     <br>
