--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="container navbar-nav">
-                <!-- <a href="https://twitter.com/D7_41" target="blank">
-                    <img class="twitterLink" src="assets/images/twitterImg.png" height="50" width="50" alt="twitter icon">
-                </a> -->
                 <a href="https://github.com/djwasing" target="blank">
                     <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
                 </a>
@@ -88,6 +85,17 @@
                         <h5 class="card-title">Lord of the Rings RPG</h5>
                         <p class="card-text">jQuery battle card game with a Lord of the Rings theme.</p>
                         <a href="https://djwasing.github.io/unit-4-game/" target="blank" class="btn btn-primary btn-lg">Open</a>
+                    </div>
+                </div>
+            </div>
+        
+            <div class="col-md-4">
+                <div class="card card2" style="width: 18rem;">
+                    <img class="card-img-top" id="policeImg" src="assets/images/trainPic.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Train Schedule App</h5>
+                        <p class="card-text">Live database train schedule app using moment.js and Firebase.</p>
+                        <a href="https://djwasing.github.io/TrainSchedule/" target="blank" class="btn btn-primary btn-lg">Open</a>
                     </div>
                 </div>
             </div>
