--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <br>
                     <br>
                     As a full-stack developer I have earned experience across the range of the most current and
-                    relevant coding languanges for both front-end and back-end web development. In my current role as a
+                    relevant coding languages for both front-end and back-end web development. In my current role as a
                     police
                     officer I enjoy working as a team to solve complex and dynamic problems, and I look forward to
                     those same challenges as a web developer.
