linkedIn logo, minor tweaks

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="container navbar-nav">
+                <a href="https://www.linkedin.com/in/don-wasinger-163a32173/" target="blank">
+                    <img class="githubLink" src="assets/images/linkedInLogo.png" height="50" width="50" alt="linkedIn icon">
+                </a>
                 <a href="https://github.com/djwasing" target="blank">
                     <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
                 </a>
@@ -80,7 +83,7 @@
                     and Rosie.
                     <br>
                     <br>
-                    As a full-stack developer I have earned experience across the range of the most current and
+                    As a Full-Stack Developer I have earned experience across the range of the most current and
                     relevant coding languages for both front-end and back-end web development. In my current role as a
                     police
                     officer I enjoy working as a team to solve complex and dynamic problems, and I look forward to
@@ -91,7 +94,7 @@
                     and creativity to make websites and applications more intuitive and efficient.
                     <br>
                     <br>
-                    Please explore my website and view my Portfolio. You can also jump to my Github via the icon to view my code. 
+                    Please explore my website and view my Portfolio. You can also jump to my LinkedIn profile or Github the icons. 
                     Enter your contact info and I will get back to you right away. Thanks for visiting!
                 </p>
                 <br>
