--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="container navbar-nav">
+                <a href="https://www.linkedin.com/in/don-wasinger-163a32173/" target="blank">
+                    <img class="githubLink" src="assets/images/linkedInLogo.png" height="50" width="50" alt="linkedIn icon">
+                </a>
                 <a href="https://github.com/djwasing" target="blank">
                     <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
                 </a>
@@ -89,7 +92,7 @@
                     </div>
                 </div>
             </div>
-        
+
             <div class="col-md-4">
                 <div class="card card2" style="width: 18rem;">
                     <img class="card-img-top" id="musicImg" src="assets/images/CountryMusic.jpg" alt="Card image cap">
@@ -99,7 +102,7 @@
                         <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-primary btn-lg">Open</a>
                     </div>
                 </div>
-            </div>    
+            </div>
         </div>
     </div>
 
