--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="container navbar-nav">
-                <!-- <a href="https://twitter.com/D7_41" target="blank">
-                    <img class="twitterLink" src="assets/images/twitterImg.png" height="50" width="50" alt="twitter icon">
-                </a> -->
+                <a href="https://www.linkedin.com/in/don-wasinger-163a32173/" target="blank">
+                    <img class="githubLink" src="assets/images/linkedInLogo.png" height="50" width="50" alt="linkedIn icon">
+                </a>
                 <a href="https://github.com/djwasing" target="blank">
                     <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
                 </a>
@@ -37,7 +37,7 @@
                 <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link active" href="contact.html">Contact</a>
             </div>
-        
+
 
         </div>
     </nav>
