--- a/contact.html
+++ b/contact.html
@@ -42,12 +42,9 @@
         </div>
     </nav>
 
-    <h2>
-        Connect
-    </h2>
-
-    <div class="container">
-        <form>
+    <div class="container form">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrjpMd0qhJ8iOWHpPXNjyNarQRcmgLfUuEcActPRi20ScDTg/viewform?embedded=true" width="640" height="829" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <!-- <form>
             <div class="form-group">
                 <label for="exampleInputName1">Name</label>
                 <input type="text" class="form-control" id="exampleInputName" aria-descibedby="nameHelp" placeholder="Enter Name">
@@ -68,7 +65,7 @@
             <br>
 
             <button type="submit" class="btn btn-primary">Send Email</button>
-        </form>
+        </form> -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
