--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bootstrap_Portfolio</title>
     <link rel="icon" href="assets/images/graffiti_d.jpg" />
+    <link href="https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Sorts Mill Goudy' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/reset.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -14,92 +17,164 @@
 
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #800000">
-        <img src="assets/images/avatar1.jpg" width="50" height="50" class="d-inline-block align-top" id="avatar" alt="small picture of me">
-        <a class="navbar-brand" href="index.html">
-            <div class="nameText">
-                Don Wasinger
-            </div>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="container navbar-nav">
-                <a href="https://www.linkedin.com/in/don-wasinger-163a32173/" target="blank">
-                    <img class="githubLink" src="assets/images/linkedInLogo.png" height="50" width="50" alt="linkedIn icon">
-                </a>
-                <a href="https://github.com/djwasing" target="blank">
-                    <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
-                </a>
-                <a class="nav-item nav-link active" href="index.html">About<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link" href="contact.html">Contact</a>
-            </div>
-        </div>
-    </nav>
-    <h2>
-        About Me
-    </h2>
-
-    <div class="container">
+    <div class="side-navBar">
         <div class="row">
-            <div class="container">
-                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade float-left photos" data-ride="carousel">
-                    <div class="carousel-inner photos1">
-                        <div class="carousel-item active">
-                            <img src="assets/images/photo2.JPG" class="d-block w-100" alt="Don and Jackie with dogs">
+            <p class="quote">
+                "The quality of your work, in the long run, is the deciding factor on how much your services are valued
+                by the world."
+            </p>
+            <a href="#infoArea">H o m e</a>
+            <a href="#portfolioArea">P o r t f o l i o</a>
+            <a href="#contactArea">C o n t a c t</a>
+            <a href="https://www.linkedin.com/in/don-wasinger-163a32173/" target="blank">
+                <img class="githubLink" src="assets/images/linkedInLogo.png" height="50" width="50" alt="linkedIn icon">
+            </a>
+            <a href="https://github.com/djwasing" target="blank">
+                <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
+            </a>
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="row banner">
+            <h1 class="bannerText">Don Wasinger</h1>
+        </div>
+        <div id="infoArea">
+            <h2 class="title">About Me</h2>
+            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade float-left photos" data-ride="carousel">
+                <div class="carousel-inner photos1">
+                    <div class="carousel-item active">
+                        <img src="assets/images/photo2.JPG" class="d-block w-100" alt="Don and Jackie with dogs">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/MotoPhoto.jpg" class="d-block w-100" alt="Me on motorcycle">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/DJandTruck.jpeg" class="d-block w-100" alt="Don, Jackie, Grandpa's Truck">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/DWroyals.jpg" class="d-block w-100" alt="Don at Royals media room">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/DJhiking.jpg" class="d-block w-100" alt="Don and Jackie hiking AZ">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/motoPic.jpg" class="d-block w-100" alt="Don Tail of the Dragon">
+                    </div>
+                </div>
+            </div>
+            <p class="aboutMe">
+                I grew up in Winona, Minnesota and graduated from the University of Kansas in 2012. I've served the
+                citizens of Overland Park as a police officer for the last 5 years. During that time, I received
+                several merit-based awards and commendations, including being named Officer of the Quarter in 2018.
+                <br>
+                <br>
+                In my spare time I enjoy working with my wife, Jackie, to remodel our 92-year-old <a href="https://www.instagram.com/flint.street_farmhouse/"
+                    target="blank">fixer-upper home</a>,
+                riding my motorcycle, and spending time outdoors hunting, hiking, or walking our two dogs, Riften
+                and Rosie.
+                <br>
+                <br>
+                As a Full-Stack Developer I have earned experience across the range of the most current and
+                relevant coding languages for both front-end and back-end web development. In my current role as a
+                police
+                officer I enjoy working as a team to solve complex and dynamic problems, and I look forward to
+                those same challenges as a web developer.
+                <br>
+                <br>
+                I believe technology has the power to make our lives better. I want to use my skills, knowledge,
+                and creativity to make websites and applications more intuitive and efficient.
+                <br>
+                <br>
+                Please explore my website and view my Portfolio. You can also jump to my LinkedIn profile or Github via
+                the
+                icons.
+                Enter your contact info and I will get back to you right away. Thanks for visiting!
+            </p>
+            <br>
+        </div>
+
+        <div class="portfolioArea" id="portfolioArea">
+            <h2 class="title">Portfolio</h2>
+            <div class="container1">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card card1" style="width: 18rem;">
+                            <img class="card-img-top" id="policeImg" src="assets/images/scoutLogo.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Scout Project</h5>
+                                <p class="card-text">App compares Uber and Lyft prices using ajax calls and jQuery.</p>
+                                <a href="https://djwasing.github.io/Scout-Project-App/" target="blank" class="btn btn-lg">Open</a>
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="assets/images/MotoPhoto.jpg" class="d-block w-100" alt="Me on motorcycle">
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card card1" style="width: 18rem;">
+                            <img class="card-img-top" id="policeImg" src="assets/images/trainPic.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Train Schedule App</h5>
+                                <p class="card-text">Live database train schedule app using moment.js and Firebase.</p>
+                                <a href="https://djwasing.github.io/TrainSchedule/" target="blank" class="btn btn-lg">Open</a>
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="assets/images/DJandTruck.jpeg" class="d-block w-100" alt="Don, Jackie, Grandpa's Truck">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/images/DWroyals.jpg" class="d-block w-100" alt="Don at Royals media room">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/images/DJhiking.jpg" class="d-block w-100" alt="Don and Jackie hiking AZ">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/images/motoPic.jpg" class="d-block w-100" alt="Don Tail of the Dragon">
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card card1" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/images/office.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Trivia Game</h5>
+                                <p class="card-text">jQuery trivia game with The Office theme.</p>
+                                <a href="https://djwasing.github.io/TriviaGame/" target="blank" class="btn btn-lg">Open</a>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- <img id="profilePic" class="float-left img" src="assets/images/photo2.JPG" alt="photo of me" /> -->
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="policeImg" src="assets/images/LOTR.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Lord of the Rings RPG</h5>
+                                <p class="card-text">jQuery battle card game with a Lord of the Rings theme.</p>
+                                <a href="https://djwasing.github.io/unit-4-game/" target="blank" class="btn btn-lg">Open</a>
+                            </div>
+                        </div>
+                    </div>
 
-                <p>
-                    I grew up in Winona, Minnesota and graduated from the University of Kansas in 2012. I've served the
-                    citizens of Overland Park as a police officer for the last 5 years. During that time, I received
-                    several merit-based awards and commendations, including being named Officer of the Quarter in 2018.
-                    <br>
-                    <br>
-                    In my spare time I enjoy working with my wife, Jackie, to remodel our 92-year-old <a href="https://www.instagram.com/flint.street_farmhouse/"
-                        target="blank">fixer-upper home</a>,
-                    riding my motorcycle, and spending time outdoors hunting, hiking, or walking our two dogs, Riften
-                    and Rosie.
-                    <br>
-                    <br>
-                    As a Full-Stack Developer I have earned experience across the range of the most current and
-                    relevant coding languages for both front-end and back-end web development. In my current role as a
-                    police
-                    officer I enjoy working as a team to solve complex and dynamic problems, and I look forward to
-                    those same challenges as a web developer.
-                    <br>
-                    <br>
-                    I believe technology has the power to make our lives better. I want to use my skills, knowledge,
-                    and creativity to make websites and applications more intuitive and efficient.
-                    <br>
-                    <br>
-                    Please explore my website and view my Portfolio. You can also jump to my LinkedIn profile or Github the icons. 
-                    Enter your contact info and I will get back to you right away. Thanks for visiting!
-                </p>
-                <br>
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="musicImg" src="assets/images/CountryMusic.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Hangman Game</h5>
+                                <p class="card-text">JavaScript word guessing game with a country music theme.</p>
+                                <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="apiImage" src="assets/images/apiImage.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Giphy Search App</h5>
+                                <p class="card-text">Ajax call to Giphy API and jQuery for dynamic creation.</p>
+                                <a href="https://djwasing.github.io/gif_dynamic/" target="blank" class="btn btn-lg">Open</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div class="contactArea" id="contactArea">
+            <div class="container form">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrjpMd0qhJ8iOWHpPXNjyNarQRcmgLfUuEcActPRi20ScDTg/viewform?embedded=true"
+                    width="640" height="929" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -108,11 +183,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
-
-    <footer>
-        Copyright
-    </footer>
+    <script src="assets/app.js"></script>
 
 
 </body>
