--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Giphy Search App</h5>
                                 <p class="card-text">Ajax call to Giphy API and jQuery for dynamic creation.</p>
-                                <a href="https://djwasing.github.io/gif_dynamic/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://djwasing.github.io/Giphy-Search-App/" target="blank" class="btn btn-lg">Open</a>
                             </div>
                         </div>
                     </div>
