--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Bootstrap_Portfolio</title>
-    <link rel="icon" href="assets/images/graffiti_d.jpg" />
+    <link rel="icon" href="assets/images/favIcon.png" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Sorts Mill Goudy' rel='stylesheet'>
@@ -37,6 +37,7 @@
     <div class="wrapper">
         <div class="row banner" id="banner">
             <h1 class="bannerText">W A S I N G E R / D O N</h1>
+            <h3 class="bannerSub">Full-Stack Web Developer</h3>
         </div>
         <div id="infoArea">
             <h2 class="title">About Me</h2>
