--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="wrapper">
         <div class="row banner" id="banner">
             <h1 class="bannerText">W A S I N G E R / D O N</h1>
-            <h3 class="bannerSub">Full-Stack Web Developer</h3>
+            <h3 id="bannerSub">Full-Stack Web Developer</h3>
         </div>
         <div id="infoArea">
             <h2 class="title">About Me</h2>
