--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                         <div class="card card2" style="width: 18rem;">
                             <img class="card-img-top" id="apiImage" src="assets/images/apiImage.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Giphy Search App</h5>
-                                <p class="card-text">Ajax call to Giphy API and jQuery for dynamic creation.</p>
-                                <a href="https://djwasing.github.io/Giphy-Search-App/" target="blank" class="btn btn-lg">Open</a>
-                                <a href="https://github.com/djwasing/Giphy-Search-App" target="blank" class="btn btn-lg">GitHub</a>
+                                <h5 class="card-title">Liri Bot</h5>
+                                <p class="card-text">Node.js app that searches various APIs for info on songs, artists, & movies.</p>
+                                <!-- <a href="" target="blank" class="btn btn-lg">Open</a> -->
+                                <a href="https://github.com/djwasing/Liri-Node-App" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" 
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
