--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
 
                     <div class="col-md-4">
                         <div class="card card2" style="width: 18rem;">
-                            <img class="card-img-top" id="musicImg" src="assets/images/CountryMusic.jpg" alt="Card image cap">
+                            <img class="card-img-top" id="dogImg" src="assets/images/dogPhoto.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Hangman Game</h5>
-                                <p class="card-text">JavaScript word guessing game with a country music theme.</p>
-                                <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a>
-                                <a href="https://github.com/djwasing/Word_Guess_Game" target="blank" class="btn btn-lg">GitHub</a>
+                                <p class="card-text">Node.js word guessing app with a dog theme.</p>
+                                <!-- <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a> -->
+                                <a href="https://github.com/djwasing/Node-Word-Guess" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
