added latest assignment

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                         <div class="card card2" style="width: 18rem;">
                             <img class="card-img-top" id="apiImage" src="assets/images/apiImage.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Liri Bot</h5>
-                                <p class="card-text">Node.js app that searches various APIs for info on songs, artists, & movies.</p>
+                                <h5 class="card-title">Node/MySQL Shop App</h5>
+                                <p class="card-text">Node.js app that utilizes MySQL database.</p>
                                 <!-- <a href="" target="blank" class="btn btn-lg">Open</a> -->
-                                <a href="https://github.com/djwasing/Liri-Node-App" target="blank" class="btn btn-lg">GitHub</a>
+                                <a href="https://github.com/djwasing/Node_Bamazon_App" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
