--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Bootstrap_Portfolio</title>
-    <link rel="icon" href="assets/images/favIcon.png" />
+    <link rel="icon" href="assets/images/dwIcon.png" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Sorts Mill Goudy' rel='stylesheet'>
@@ -87,10 +87,10 @@
                         <div class="card card1" style="width: 18rem;">
                             <img class="card-img-top" id="policeImg" src="assets/images/scoutLogo.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Scout Project</h5>
+                                <h5 class="card-title">Scout Ride Share</h5>
                                 <p class="card-text">App compares Uber and Lyft prices using ajax calls and jQuery.</p>
-                                <a href="https://djwasing.github.io/Scout-Project-App/" target="blank" class="btn btn-lg">Open</a>
-                                <a href="https://github.com/djwasing/Scout-Project-App" target="blank" class="btn btn-lg">GitHub</a>
+                                <a href="https://scout-ride-share.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/Scout-Ride-Share" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -189,6 +189,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Hangman Game (JS)</h5>
                                 <p class="card-text">JavaScript hangman-style game with a country music theme. </p>
+                                <br>
                                 <!-- <a href="" target="blank" class="btn btn-lg">Open</a> -->
                                 <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a>
                                 <a href="https://github.com/djwasing/Word_Guess_Game" target="blank" class="btn btn-lg">GitHub</a>
