--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a id="nav" href="#infoArea">a b o u t</a>
             <a id="nav" href="#portfolioArea">P o r t f o l i o</a>
             <a id="nav" href="#contactArea">C o n t a c t</a>
-            <a id="nav" href="assets/DonWasingerResumé.pdf" target="_blank">R e s u m é <i id="downL" class="fas fa-file-download"></i></a>
+            <a id="nav" href="assets/DonWasingerResume.pdf" target="_blank">R e s u m é <i id="downL" class="fas fa-file-download"></i></a>
             <a href="https://www.linkedin.com/in/don-wasinger-163a32173/" target="blank">
                 <img class="githubLink" src="assets/images/linkedInLogo.png" height="50" width="50" alt="linkedIn icon">
             </a>
